see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Sep-2009 Hannes Papenberg
 + Added Profile Plugin from experimental branch. This makes it possible to extend your user profile easily.
 ^ Some performance improvements and changing some code to PHP strict.

13-Sep-2009 Gergo Erdosi
 ^ Replaced installation favicon.
 # [#18011] XML says category instead of categories
 # [#17983] [patch] New Categories are attaching to ROOT instead of designated parent
 # [#17980] Query Error in JHTML::_( 'list.users' )
 # Various E_STRICT validation fixes.
 ^ Changed arguments of setBuffer() method in JDocument classes.
 # [#18025] Make Toolbars conistent across administrator components
 # Fixed issue in the clean() method of JFilterInput.
 # Fixed issue with JRoute->parse().

12-Sep-2009 Ron Severdia
# BlueStork CSS fixes
# Article Manager cleanup
^ Replace tables in pane sliders
+ Robots dropdown added
+ Missing language strings added

11-Sep-2009 Hannes Papenberg
 ^ Ability to add additional layouts with own parameters via a template added to menu manager

10-Sep-2009 Ron Severdia
 # BlueStork fixes
 # Edit Category interface tweaks
 ^ Copied system images to admin template subfolder

10-Sep-2009 Ercan Ozkaya
 ^ Localised invalid token messages
 ^ Converted jExit calls to jexit
 # Fixed notices in com_messages
 # Fixed invalid client_id value for redirect plugin
 - Removed checked_out values in installation sql

08-Sep-2009 Hannes Papenberg
 + Added "Touched" option to mod_latestnews

08-Sep-2009 Ron Severdia
 # BlueStork fixes
 ^ Moved Media Manager folder field to bottom
 $ Language consistency fixes
 ^ Updated toolbar icons

31-Aug-2009 Ron Severdia